therapist-webapi/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: therapist-webapi
  labels:
    app: therapist-webapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: therapist-webapi
  template:
    metadata:
      labels:
        app: therapist-webapi
    spec:
      containers:
        - name: therapist-webapi
          # Image gets updated by Jenkins to REGISTRY/therapist-webapi:latest
          image: registry.campusphysicaltherapy.com/therapist-webapi:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20
