therapist-webapi/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: therapist-webapi
  labels:
    app: therapist-webapi
spec:
  selector:
    app: therapist-webapi
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
