therapist-webapi/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: therapist-webapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-real-ip: "true"
    nginx.ingress.kubernetes.io/proxy-real-ip-cidr: "0.0.0.0/0" 
spec:
  ingressClassName: nginx
  rules:
    - host: therapistapi.campusphysicaltherapy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: therapist-webapi
                port:
                  number: 80
  tls:
    - hosts:
        - therapistapi.campusphysicaltherapy.com
      secretName: therapist-webapi-tls
